Updated replacement config file

--- a/replacements-config.yaml
+++ b/replacements-config.yaml
@@ -1,3 +1,5 @@
 globalReplacements:
   - key: PlatformPrefix
     path: /accelerator/lza-prefix
+  - key: AcceleratorPrefix
+    path: /accelerator/lza-prefix
