Amended security config file and removed curly brackets on aws-accelerator-cloudtrail-logs

--- a/security-config.yaml
+++ b/security-config.yaml
@@ -209,7 +209,7 @@ cloudWatch:
           metricName: EC2LargeInstanceEventCount
           metricValue: '1'
         - filterName: RootLoginEventCountFilter
-          logGroupName: '{aws-accelerator-cloudtrail-logs'
+          logGroupName: 'aws-accelerator-cloudtrail-logs'
           filterPattern: '{($.eventName=ConsoleLogin) && ($.userIdentity.type=Root) && ($.responseElements.ConsoleLogin=Success)}'
           metricNamespace: LogMetrics
           metricName: RootLoginEventCount
